specify Myself iPhone as DMC
specify Myself iPhone as DMC&getDMRs

--- a/Platinum/Base.lproj/Main.storyboard
+++ b/Platinum/Base.lproj/Main.storyboard
@@ -104,7 +104,32 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="564" y="356"/>
+            <point key="canvasLocation" x="267" y="361"/>
+        </scene>
+        <!--Render Detail View Controller-->
+        <scene sceneID="PeN-ka-5dr">
+            <objects>
+                <tableViewController storyboardIdentifier="RenderDetailViewController" id="Oui-HK-sZW" customClass="RenderDetailViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="HED-yi-7sU">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="0N7-U4-aEr">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0N7-U4-aEr" id="WFP-aD-ekg">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Oui-HK-sZW" id="fvX-97-WI7"/>
+                            <outlet property="delegate" destination="Oui-HK-sZW" id="lO8-0l-ZyD"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oHX-uu-yC3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1017" y="361"/>
         </scene>
     </scenes>
 </document>
